Fix: Add alignment for emails in trans_detail so that email is readable; Feat: Add css for 'more' button on homepage; Feat: Add styling for list items in de transaction list

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -25,9 +25,10 @@
     align-self: center;
     justify-self: center;
     color: #3A0CA3;
+    margin-top: -10px
 }
 
-.recipient, .amount, .reason, .message{
+.amount, .reason, .message{
     display: flex;
     justify-content: center;
     align-items: center;
