--- a/sass/modules/_button.scss
+++ b/sass/modules/_button.scss
@@ -51,7 +51,7 @@
     width: 250px;
     height: 70px;
     font-size: 36px;
-    margin-top: 10px;
+    margin-top: -10px;
 }
 
 .button--secondary{
