--- a/sass/modules/_form.scss
+++ b/sass/modules/_form.scss
@@ -54,3 +54,25 @@
     cursor: pointer;
 }
 
+.moreTransactions{
+    width: 53px;
+    text-decoration: none;
+    color: #3A0CA3;
+    position: absolute;
+    left: 287px;
+    top: 264px;
+    padding: 10px 20px;
+    background-color: #FF7446;
+    border: none;
+}
+
+.recipient{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center; 
+    overflow-x: hidden;
+    box-sizing: border-box;
+    padding-left: 5px;
+}
+  
+
